--- a/src/SVM.ipynb
+++ b/src/SVM.ipynb
@@ -401,7 +401,7 @@
    "id": "70588435-72f0-4937-a1e2-5da652d62076",
    "metadata": {},
    "source": [
-    "## Data Prep"
+    "## Data "
    ]
   },
   {
@@ -3698,8 +3698,8 @@
          "autorange": true,
          "constrain": "domain",
          "domain": [
-          0.39917506874427133,
-          0.6008249312557287
+          0.39299610894941633,
+          0.6070038910505836
          ],
          "range": [
           -0.5,
@@ -4670,8 +4670,8 @@
          "autorange": true,
          "constrain": "domain",
          "domain": [
-          0.39917506874427133,
-          0.6008249312557287
+          0.39299610894941633,
+          0.6070038910505836
          ],
          "range": [
           -0.5,
@@ -5642,8 +5642,8 @@
          "autorange": true,
          "constrain": "domain",
          "domain": [
-          0.39917506874427133,
-          0.6008249312557287
+          0.39299610894941633,
+          0.6070038910505836
          ],
          "range": [
           -0.5,
@@ -7404,8 +7404,8 @@
           1
          ],
          "range": [
-          -0.057469157096431404,
-          1.0598130333828693
+          -0.0577437570058662,
+          1.0600876332923042
          ],
          "title": {
           "text": "x"
