--- a/quarto/models/nn.qmd
+++ b/quarto/models/nn.qmd
@@ -1,3 +1,31 @@
+---
+lightbox: true
+---
+
 # Neural Networks
 
-Placeholder
+## Overview
+
+## Model Selection
+
+## Data Prep
+
+## Code
+
+::: {.columns}
+::: {.column}
+The jupyter notebook code for running the neural networks, data prep, and everything else on this page can be found [here](https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/Bayes%20DT.ipynb), or click on the link card to the right.
+:::
+
+::: {.column width=10%}
+<!-- Spacing column -->
+:::
+
+::: {.column width=30%}
+[![](https://github-link-card.s3.ap-northeast-1.amazonaws.com/CUBoulder-DS/CSCI-5622.png)](https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/Bayes%20DT.ipynb)
+:::
+:::
+
+## Results
+
+## Conclusions
