--- a/quarto/models/nn.qmd
+++ b/quarto/models/nn.qmd
@@ -14,7 +14,7 @@ lightbox: true
 
 ::: {.columns}
 ::: {.column}
-The jupyter notebook code for running the neural networks, data prep, and everything else on this page can be found [here](https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/Bayes%20DT.ipynb), or click on the link card to the right.
+The jupyter notebook code for running the neural networks, data prep, and everything else on this page can be found [here](https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/NN%20LM.ipynb), or click on the link card to the right.
 :::
 
 ::: {.column width=10%}
@@ -22,7 +22,7 @@ The jupyter notebook code for running the neural networks, data prep, and everyt
 :::
 
 ::: {.column width=30%}
-[![](https://github-link-card.s3.ap-northeast-1.amazonaws.com/CUBoulder-DS/CSCI-5622.png)](https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/Bayes%20DT.ipynb)
+[![](https://github-link-card.s3.ap-northeast-1.amazonaws.com/CUBoulder-DS/CSCI-5622.png)](https://github.com/CUBoulder-DS/CSCI-5622/blob/main/src/NN%20LM.ipynb)
 :::
 :::
 
