--- a/src/NN LM.ipynb
+++ b/src/NN LM.ipynb
@@ -3109,8 +3109,8 @@
          "autorange": true,
          "constrain": "domain",
          "domain": [
-          0.34172661870503596,
-          0.658273381294964
+          0.3220064724919094,
+          0.6779935275080906
          ],
          "range": [
           -0.5,
@@ -5225,8 +5225,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "e2c37db1-baef-4d5c-ae38-4bf6e07a4992",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-06T00:32:46.522920Z",
+     "iopub.status.busy": "2024-05-06T00:32:46.522423Z",
+     "iopub.status.idle": "2024-05-06T00:32:46.552355Z",
+     "shell.execute_reply": "2024-05-06T00:32:46.551859Z",
+     "shell.execute_reply.started": "2024-05-06T00:32:46.522920Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Asin</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Image Url</th>\n",
+       "      <th>Is Best Seller</th>\n",
+       "      <th>Stars</th>\n",
+       "      <th>Reviews</th>\n",
+       "      <th>Url</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Date Scraped</th>\n",
+       "      <th>List Price</th>\n",
+       "      <th>Bought In Month</th>\n",
+       "      <th>Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>86529</th>\n",
+       "      <td>B0B96TC7Y7</td>\n",
+       "      <td>1 Pair Winter Girls Fleece Lined Leggings Thic...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/81zoIr0Jq4...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>405.0</td>\n",
+       "      <td>https://www.amazon.com/dp/B0B96TC7Y7</td>\n",
+       "      <td>14.99</td>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>14.99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Girls' Clothing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86530</th>\n",
+       "      <td>B091FF8LGC</td>\n",
+       "      <td>Girl's Sweatsuits clothing lounge sets athleti...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/51+0Ec4jeg...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>https://www.amazon.com/dp/B091FF8LGC</td>\n",
+       "      <td>36.99</td>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>36.99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Girls' Clothing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86531</th>\n",
+       "      <td>B0BPHHL5G9</td>\n",
+       "      <td>Girls Pajamas Cotton Snug-fit PJS Stripe Summe...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/81MXuqutX-...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>https://www.amazon.com/dp/B0BPHHL5G9</td>\n",
+       "      <td>15.99</td>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>15.99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Girls' Clothing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86532</th>\n",
+       "      <td>B0CDM931DX</td>\n",
+       "      <td>Shirts for Girls Long Sleeve Casual Loose Fit ...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/71aNqza-N3...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>https://www.amazon.com/dp/B0CDM931DX</td>\n",
+       "      <td>20.99</td>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>20.99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Girls' Clothing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86533</th>\n",
+       "      <td>B0BN6TCMPH</td>\n",
+       "      <td>3 Pack Girls Flowy Shorts with Spandex Liner 2...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/71vmYVHTgf...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1472.0</td>\n",
+       "      <td>https://www.amazon.com/dp/B0BN6TCMPH</td>\n",
+       "      <td>34.95</td>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>34.95</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>Girls' Clothing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507850</th>\n",
+       "      <td>B07NRDGL5V</td>\n",
+       "      <td>Girls' Big 7-16 Side-tie Sporty Tee Shirt</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/61jaiBZyoq...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>https://www.amazon.com/dp/B07NRDGL5V</td>\n",
+       "      <td>15.37</td>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>15.37</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Girls' Clothing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507851</th>\n",
+       "      <td>B0B8HK2S33</td>\n",
+       "      <td>Girl's Summer Essentials Tie Back Bikini (Big ...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/61zBapC07f...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>https://www.amazon.com/dp/B0B8HK2S33</td>\n",
+       "      <td>43.50</td>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>43.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Girls' Clothing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507852</th>\n",
+       "      <td>B0BFJ9CQSM</td>\n",
+       "      <td>Girl's French Terry Jogger Pants (Little Kids/...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/617p-CscHF...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>https://www.amazon.com/dp/B0BFJ9CQSM</td>\n",
+       "      <td>36.00</td>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>40.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Girls' Clothing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507853</th>\n",
+       "      <td>B0BRKP2XDH</td>\n",
+       "      <td>Girl's Palm Springs Two-Piece Ruffle Set (Big ...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/51XtarHwdE...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>https://www.amazon.com/dp/B0BRKP2XDH</td>\n",
+       "      <td>39.00</td>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>39.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Girls' Clothing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507854</th>\n",
+       "      <td>B0B5P8ZGNV</td>\n",
+       "      <td>Girl's Maddie Joggers (Toddler/Little Kids/Big...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/518JKyfIvo...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>https://www.amazon.com/dp/B0B5P8ZGNV</td>\n",
+       "      <td>21.20</td>\n",
+       "      <td>2023-11-01</td>\n",
+       "      <td>21.20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Girls' Clothing</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>28143 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Asin                                               Name  \\\n",
+       "86529   B0B96TC7Y7  1 Pair Winter Girls Fleece Lined Leggings Thic...   \n",
+       "86530   B091FF8LGC  Girl's Sweatsuits clothing lounge sets athleti...   \n",
+       "86531   B0BPHHL5G9  Girls Pajamas Cotton Snug-fit PJS Stripe Summe...   \n",
+       "86532   B0CDM931DX  Shirts for Girls Long Sleeve Casual Loose Fit ...   \n",
+       "86533   B0BN6TCMPH  3 Pack Girls Flowy Shorts with Spandex Liner 2...   \n",
+       "...            ...                                                ...   \n",
+       "507850  B07NRDGL5V          Girls' Big 7-16 Side-tie Sporty Tee Shirt   \n",
+       "507851  B0B8HK2S33  Girl's Summer Essentials Tie Back Bikini (Big ...   \n",
+       "507852  B0BFJ9CQSM  Girl's French Terry Jogger Pants (Little Kids/...   \n",
+       "507853  B0BRKP2XDH  Girl's Palm Springs Two-Piece Ruffle Set (Big ...   \n",
+       "507854  B0B5P8ZGNV  Girl's Maddie Joggers (Toddler/Little Kids/Big...   \n",
+       "\n",
+       "                                                Image Url  Is Best Seller  \\\n",
+       "86529   https://m.media-amazon.com/images/I/81zoIr0Jq4...           False   \n",
+       "86530   https://m.media-amazon.com/images/I/51+0Ec4jeg...           False   \n",
+       "86531   https://m.media-amazon.com/images/I/81MXuqutX-...           False   \n",
+       "86532   https://m.media-amazon.com/images/I/71aNqza-N3...           False   \n",
+       "86533   https://m.media-amazon.com/images/I/71vmYVHTgf...            True   \n",
+       "...                                                   ...             ...   \n",
+       "507850  https://m.media-amazon.com/images/I/61jaiBZyoq...           False   \n",
+       "507851  https://m.media-amazon.com/images/I/61zBapC07f...           False   \n",
+       "507852  https://m.media-amazon.com/images/I/617p-CscHF...           False   \n",
+       "507853  https://m.media-amazon.com/images/I/51XtarHwdE...           False   \n",
+       "507854  https://m.media-amazon.com/images/I/518JKyfIvo...           False   \n",
+       "\n",
+       "        Stars  Reviews                                   Url  Price  \\\n",
+       "86529     4.4    405.0  https://www.amazon.com/dp/B0B96TC7Y7  14.99   \n",
+       "86530     4.4    307.0  https://www.amazon.com/dp/B091FF8LGC  36.99   \n",
+       "86531     4.7    118.0  https://www.amazon.com/dp/B0BPHHL5G9  15.99   \n",
+       "86532     5.0      2.0  https://www.amazon.com/dp/B0CDM931DX  20.99   \n",
+       "86533     4.7   1472.0  https://www.amazon.com/dp/B0BN6TCMPH  34.95   \n",
+       "...       ...      ...                                   ...    ...   \n",
+       "507850    4.7      0.0  https://www.amazon.com/dp/B07NRDGL5V  15.37   \n",
+       "507851    0.0      0.0  https://www.amazon.com/dp/B0B8HK2S33  43.50   \n",
+       "507852    0.0      0.0  https://www.amazon.com/dp/B0BFJ9CQSM  36.00   \n",
+       "507853    0.0      0.0  https://www.amazon.com/dp/B0BRKP2XDH  39.00   \n",
+       "507854    0.0      0.0  https://www.amazon.com/dp/B0B5P8ZGNV  21.20   \n",
+       "\n",
+       "       Date Scraped  List Price  Bought In Month         Category  \n",
+       "86529    2023-11-01       14.99              0.0  Girls' Clothing  \n",
+       "86530    2023-11-01       36.99              0.0  Girls' Clothing  \n",
+       "86531    2023-11-01       15.99              0.0  Girls' Clothing  \n",
+       "86532    2023-11-01       20.99              0.0  Girls' Clothing  \n",
+       "86533    2023-11-01       34.95           2000.0  Girls' Clothing  \n",
+       "...             ...         ...              ...              ...  \n",
+       "507850   2023-11-01       15.37              0.0  Girls' Clothing  \n",
+       "507851   2023-11-01       43.50              0.0  Girls' Clothing  \n",
+       "507852   2023-11-01       40.00              0.0  Girls' Clothing  \n",
+       "507853   2023-11-01       39.00              0.0  Girls' Clothing  \n",
+       "507854   2023-11-01       21.20              0.0  Girls' Clothing  \n",
+       "\n",
+       "[28143 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_az[df_az[\"Category\"] == \"Girls' Clothing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de1de57b-f838-4e3e-9031-29104d38a21b",
    "metadata": {},
    "outputs": [],
    "source": []
